# tapal

./: .gitignore  LICENSE  README.md  TODOs.md  stack.yaml  tapal.cabal
app/: Main.hs  Probe.hs  SyntaxHighlighting.hs  Tapal.hs  Utilities.hs
app/Tapal/: AnsiColors.hs  CommandLine.hs  SyntaxHighlighting.hs  Types.hs  Utilities.hs
src/: Probe.hs  Tapal.hs
test/example-service/requests/posts/: posts-by-user-1.yaml
