name:                tapal
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/missingfaktor/tapal#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Rahul Goma Phulore
maintainer:          rahul.phulore.999+tapal@gmail.com
copyright:           2017 Rahul Goma Phulore
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

description:         Please see the README on Github at <https://github.com/missingfaktor/tapal#readme>

executable tapal
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Tapal
  build-depends:       base >= 4.7 && < 5
                     , filepath
                     , directory
                     , mtl
                     , optparse-applicative
                     , text
  default-language:    Haskell2010

test-suite tapal-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tapal
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/missingfaktor/tapal
